# p2p-edge

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  gateway.config.example.json  gateway1.config.json  gateway2.config.json  gateway3.config.json
.github/workflows/: smoke.yml
crates/edge-bootstrap/: Cargo.toml  Dockerfile
crates/edge-bootstrap/src/: api.rs  auth.rs  challenge.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  manifest.rs  metrics.rs  prober.rs  registry.rs  signer.rs
crates/edge-bootstrap/tests/: auth_tests.rs  challenge_flow_tests.rs  manifest_tests.rs  registry_api_tests.rs  registry_tests.rs
crates/edge-gateway/: Cargo.toml  Dockerfile
crates/edge-gateway/src/: main.rs  manifest.rs  proto.rs
crates/edge-gateway/src/forwarding/: behaviour.rs  bridge.rs  config.rs  conn_handler.rs  handler.rs  limiter.rs  metrics.rs  mod.rs  router.rs  types.rs
crates/edge-gateway/src/forwarding/backend/: unix.rs
crates/edge-gateway/tests/: backend_unix_tests.rs  dropper_tests.rs  forward_behaviour_protocols_tests.rs  forward_bridge_tests.rs  forward_handler_close_tests.rs  forward_handler_shape_tests.rs  forward_handler_tests.rs  forward_limiter_tests.rs  forward_metrics_tests.rs  forward_router_tests.rs  forward_types_tests.rs  metrics_helper.rs  support.rs
crates/edge-static/: Cargo.toml
docs/: forwarding.md  invariants.md
scripts/: approver.py  challenge.py  env.example.sh  gateway_env.example.sh  get_challenge.sh  manual_sign.sh  sign_challenge.sh  smoke.sh
