[package]
name = "edge-bootstrap"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Bootstrap directory and manifest service for p2p-edge"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = "0.21"
sha2 = "0.10"
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hyper = "1"
tower = "0.5"
rusqlite = { version = "0.31", features = ["bundled", "time"] }
tempfile = "3.10"
subtle = "2.5"
rand = { workspace = true }

[dev-dependencies]
lazy_static = "1.4"

[lints]
workspace = true
