[package]
name = "edge-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libp2p = { workspace = true }
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { workspace = true }
anyhow = { workspace = true }
multiaddr = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
chrono = "0.4"
futures = "0.3"
async-trait = "0.1"
time = { workspace = true }
axum = { workspace = true }
prometheus = "0.13"

[lints]
workspace = true
